[package]
name = "async-pq"
version = "0.1.0"
authors = ["Yusuf Irwandi <yusuf.irwandi@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
log = "0.4"
regex = "1"
lazy_static = "1.4"

[dependencies-dev]
env_logger = "0.7"
